crates/plotnik-lib/tests/02-parser/recovery_validation/category_subtype_rejects_leading_underscore.txt
Q = (expression#_private)
==== diagnostics ====
error: node types must be parenthesized
 --> query.ptk:1:18
  |
1 | Q = (expression#_private)
  |                  ^^^^^^^
  |
help: wrap in parentheses
  |
1 - Q = (expression#_private)
1 + Q = (expression#_(private))
  |
